Fixed alignment and fonts of the HTML and beautified navbar.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
+/*===== GOOGLE FONTS =====*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+html {
+  /* font-size: 62.5%; */
+  font-family: 'Poppins', sans-serif;
+}
+
 .flex-display { /* Flex display for layout */
   display: flex;
   /* width: 100%; */
   /* margin-left: 50px; */
 }
 
-.page{ /* Flex display for layout */
+.page{ 
   /* margin: 50px; */
+  width: 80%;
+  margin: auto;
 }
 
 .space { /* Creating space between elements */
@@ -15,9 +25,7 @@ justify-content: space-between;
 
 
 .hotel-title{ /* Styling for hotel title */
-  
   font-weight: bold;
-
 }
 
 #starhotel-txt{  /* Styling for a specific element with ID "starhotel-txt" */
@@ -86,14 +94,22 @@ body{ /* Resetting default body margins and padding */
   font-size: 10px;
 }
 
+.globe_logo {
+  /* background-color: #000; */
+  width: 150px;
+  height: auto;
+}
+
 .nav-container{ /* Styling for an element with ID "rightside" */
-  box-shadow: 0px 0px 20px 0px #e3e3e3;
+  box-shadow: 0px 0px 10px 0px grey;
   display: flex;
   align-items: center;
   justify-content: space-around;
   background: none;
   text-align: center;
   vertical-align: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .marging-spacing{
@@ -109,7 +125,7 @@ body{ /* Resetting default body margins and padding */
 
 .nav-buton{
   border: none;
-  margin: 0 20px 0 20px;
+  margin: 0 20px 0px 20px;
   background:none;
 }
 nav {
